tests/Fase2-Semantic/error/t28-not_boolean_in_if_condition.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = x+b; 
        return a;
    }

    void main(){
        x=0;
        if (x)
        {
            /* code */
        }
        add(2);
    }
    
}
